--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!--*Create a new file in your repository called index.html
 	*In index.html, follow the tutorial video called "formatting". Save a copy of index.html as template.html.
 	*Type the code necessary to create a portal to your website in 	index.html. The content should be similar to my model page.
-	*Use header, nav, main, and footer elements.
+	Use header, nav, main, and footer elements.
 	*Use h1, h2, and p elements.
 	*Copy and paste this list of requirements into the head of your index.html file as a HTML comment. Put an asterisk at the BEGINNING of the line when you finish each requirement.
 	Validate your code.
