--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	Use header, nav, main, and footer elements.
 	*Use h1, h2, and p elements.
 	*Copy and paste this list of requirements into the head of your index.html file as a HTML comment. Put an asterisk at the BEGINNING of the line when you finish each requirement.
-	Validate your code.
+	*Validate your code.
 	*View your website from your development server.
 	*Save all your work to github.com.
 	Use sftp to upload your work to our production server.
@@ -19,6 +19,8 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body>
+		<nav>
+		</nav>
 		<h1>
 			Gina's Web Design Website 
 		</h1>
