--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			Gina's Web Design Website!
 		</title>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="main.css" type="text/css">
 	</head>
 	<body>
 		<nav>
