--- a/practicequiz1.html
+++ b/practicequiz1.html
@@ -10,42 +10,47 @@
 	<body>
 		<h1>
 			Quiz 1
+
 		</h1>
-		<p1> Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
-		</p1>
-		<h2>	
+		<header> Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
+		</header>
+		<main>
+			<h2>	
+				Section 1
 		
 		
-			<h3>
-				Sub-Section A
-			</h3>
-			<p>
-					Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
-			</p>
-			<h3>
-				Sub-Section B
-			</h3>
+				<h3>
+					Sub-Section A
+				</h3>
+				<p>
+						Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
+				</p>
+				<h3>
+					Sub-Section B
+				</h3>
 		
-			<p>
-			Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
-	</h2>
-			</p>
-		<h3>
+				<p>
+				Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
+		</h2>
+				</p>
+		<h2>
 			Section 2
-		</h3>
-			<h4>
-				Sub-Section A
-			</h4>
-			<p>
-				Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. 
-			</p>
-			<h4>
-				Sub-Section B
-			</h4>
-			<p>
-				Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
-			</p>
+		</h2>
+				<h3>
+					Sub-Section A
+				</h3>
+				<p>
+					Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. 
+				</p>
+				<h3>
+					Sub-Section B
+				</h3>
+				<p>
+					Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah. Blah blah blah.
+				</p>
+		</main>
 		<footer>
 			©2016 Gina Lew - CMIS Webdesign
 		</footer>
+</html>
 
