made changes to index and main as well as the list and links

--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
 		<link rel="stylesheet" href="main.css" type="text/css">
 	</head>
 	<body>
-		<nav>
-		</nav>
-		<h1>
-			Gina's Web Design Website 
-		</h1>
+	<header>
+
+		Gina's Web Design Website 
+	</header>
+	<main>
+		
 		<h2>
 			Hello and Welcome!
 		</h2>
+	
 		<h3>
 			What is this website for?
 		</h3>
@@ -36,8 +38,58 @@
 			completed projects from the Web Design unit of the 
 			Computer Science 1 class at CMIS.
 		</p>
+
+		<heading> 
+			Lists and Links Assignment
+		</heading>
+		<nav>
+			<ul>
+				<li> 
+					<a href="listsandlinks.html">Lists and Links</a>
+				</li>
+		</nav>
 		<p>
-			©2016 Gina Lew - CMIS Web Design
+			The "Lists and Links" assignment was assigned to teach how unordered and ordered lists are created in html. New selector types in css were also introduced; comma separated and no-comma separated.
 		</p>
+		<ul>
+			<li>
+				Create a file called "listsandlinks.html" in your repository folder.
+			</li>
+			<li>
+				In "listsandlinks.html" create an detailed ordered list of step by step instructions to create a new webpage view it on the production server.
+			</li>
+			<li>
+				Also create an unordered list of 5 or more links to websites with useful webdesign related information.
+			</li>
+			<li>
+				In the nav section, create an unordered list of links with a link back to your main index.html page.
+			</li>
+			<li>
+				In the nav element of your main index.html file in public_html, add an unordered list of links with a link to "listsandlinks".
+			</li>
+			<li>
+				In your old index.html, add a heading and a paragraph description of this assignment. Also add an unordered list that contains this list of requirements.
+			</li>
+			<li>
+				Style the box model properties for all elements.
+border
+margin
+padding
+width
+height
+			</li>
+			<li>
+				Use these 2 new selector types.
+comma separated - (h1, h2) applies same properties to h1 AND h2
+no-comma separated - (main p) applies to all p elements inside the main element
+			</li>
+			<li>
+				Turn in your work.
+			</li>
+		</ul>
+	</main>
+	<footer>
+			©2016 Gina Lew - CMIS Web Design
+	</footer>
 	</body>
 </html>
