--- a/listsandlinks.html
+++ b/listsandlinks.html
@@ -5,7 +5,11 @@
 			Lists and Links
 		</title>
 		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="listsandlinks.css" type="text/css">
 	</head>
+	<header>
+		Lists and Links
+	</header>
 	<nav>
 		<ul>
 			<li>
@@ -63,22 +67,25 @@
 				Once you've uploaded everything, type exit into your terminal to exit sftp.
 			</li>
 		</ol>
-		<ul>
-			<li>
-				<a href="http://www.w3schools.com/">W3Schools</a>
-			</li>
-			<li>
-				<a href="html.com">html.com</a>
-			</li>
-			<li>
-				<a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">Mozilla Developer Network</a>
-			</li>
-			<li>
-				<a href="https://www.codecademy.com/learn/web">Codeacademy</a>
-			</li>
-			<li>
-				<a href="http://www.htmlgoodies.com/primers/html/article.php/3478131">HtmlGoodies</a>
-			</li>
+		<p>
+			<ul>
+				<li>
+					<a href="http://www.w3schools.com/">W3Schools</a>
+				</li>
+				<li>
+					<a href="html.com">html.com</a>
+				</li>
+				<li>
+					<a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">Mozilla Developer Network</a>
+				</li>
+				<li>
+					<a href="https://www.codecademy.com/learn/web">Codeacademy</a>
+				</li>
+				<li>
+					<a href="http://www.htmlgoodies.com/primers/html/article.php/3478131">HtmlGoodies</a>
+				</li>
+			</ul>
+		</p>
 	</body>
 
 
