finished lists and links assignment

--- a/listsandlinks.html
+++ b/listsandlinks.html
@@ -1,94 +1,93 @@
-<!doctype.html>
+<!doctype html>
 <html>
 	<head>
 		<title>
 			Lists and Links
 		</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="listsandlinks.css" type="text/css">
+		<link rel="stylesheet" href="main.css" type="text/css">
 	</head>
-	<header>
-		Lists and Links
-	</header>
-	<nav>
-		<ul>
-			<li>
-				<a href="index.html">Main Page</a>
-			</li>
-	</nav>
 	<body>
-		<ol>
-			<li>
-				Create a html file.
-			</li>
-			<li>
-				Type in !doctype html at the top (put it into these < >)
-			</li>
-			<li>
-				Add in meta charset="utf-8" in between < />
-			</li>
-			<li>
-				Type in head and /head (as always, in the < >). Between the two, indent and type the first heading of the website.
-			</li>
-			<li>
-				Inside head, type in title and /title (in < >). Indent the line between the two and type in the name of the website that will be displayed on the tab.
-			</li>
-			<li>
-				Add in body and /body. Indent all the things added inside.
-			</li>
-			<li>
-				Type in heaidngs and paragraphs as you see fit. Paragraphs are coded as p and /p and headings range from h1-h6.
-			</li>
-			<li>
-				Once you've added all the headings and the paragraphs, close the body with /body.
-			</li>
-			<li>
-				Add a footer by typing in footer and /footer. Indent the line in between and write what you want the footer to be.
-			</li>
-			<li>
-				Once your html is to your liking, save your work.
-			</li>
-			<li>
-				Save your work and go back to your terminal. Make sure you are in your repository folder.
-			</li>
-			<li>
-				Type in sftp username@cmis-hsteacher
-			</li>
-			<li>
-				Type in cd public_html
-			</li>
-			<li>
-			Type in put insert-file-name (in < >)
-			</li>
-			<li>
-				Open a tab in your browser and type in cmis-hsteacher/~username/filename
-			</li>
-			<li>
-				Once you've uploaded everything, type exit into your terminal to exit sftp.
-			</li>
-		</ol>
-		<p>
+		
+		<header>
+			Lists and Links
+		</header>
+		<nav>
 			<ul>
 				<li>
-					<a href="http://www.w3schools.com/">W3Schools</a>
-				</li>
-				<li>
-					<a href="html.com">html.com</a>
-				</li>
-				<li>
-					<a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">Mozilla Developer Network</a>
-				</li>
-				<li>
-					<a href="https://www.codecademy.com/learn/web">Codeacademy</a>
-				</li>
-				<li>
-					<a href="http://www.htmlgoodies.com/primers/html/article.php/3478131">HtmlGoodies</a>
+					<a href="index.html">Main Page</a>
 				</li>
 			</ul>
-		</p>
+		</nav>
+	
+			<ol>
+				<li>
+					Create a html file.
+				</li>
+				<li>
+					Type in !doctype html at the top 
+				</li>
+				<li>
+					Add in meta charset="utf-8" 
+				</li>
+				<li>
+					Type in head and /head. Between the two, indent and type the first heading of the website.
+				</li>
+				<li>
+					Inside head, type in title and /title. Indent the line between the two and type in the name of the website that will be displayed on the tab.
+				</li>
+				<li>
+					Add in body and /body. Indent all the things added inside.
+				</li>
+				<li>
+					Type in heaidngs and paragraphs as you see fit. Paragraphs are coded as p and /p and headers range from h1-h6.
+				</li>
+				<li>
+					Once you've added all the headings and the paragraphs, close the body with /body.
+				</li>
+				<li>
+					Add a footer by typing in footer and /footer. Indent the line in between and write what you want the footer to be.
+				</li>
+				<li>
+					Once your html is to your liking, save your work.
+				</li>
+				<li>
+					Save your work and go back to your terminal. Make sure you are in your repository folder.
+				</li>
+				<li>
+					Type in sftp username@cmis-hsteacher
+				</li>
+				<li>
+					Type in cd public_html
+				</li>
+				<li>
+				Type in put insert-file-name 
+				</li>
+				<li>
+					Open a tab in your browser and type in cmis-hsteacher/~username/filename
+				</li>
+				<li>
+					Once you've uploaded everything, type exit into your terminal to exit sftp.
+				</li>
+			</ol>
+		
+			<ul>
+					<li>
+						<a href="http://www.w3schools.com/">W3Schools</a>
+					</li>
+					<li>
+						<a href="html.com">html.com</a>
+					</li>
+					<li>
+						<a href="https://developer.mozilla.org/en-US/docs/Learn/HTML">Mozilla Developer Network</a>
+					</li>
+					<li>
+						<a href="https://www.codecademy.com/learn/web">Codeacademy</a>
+					</li>
+					<li>
+						<a href="http://www.htmlgoodies.com/primers/html/article.php/3478131">HtmlGoodies</a>
+					</li>
+			</ul>
+		
 	</body>
-
-
-
-
-
+</html>
