added img and edited

--- a/placeorder.html
+++ b/placeorder.html
@@ -2,6 +2,26 @@
 <html>
 	<head>
 		<title>
-			
+			Thank You!
 		</title>
+		<meta charset="utf-8"/>
+		<link rel="stylesheet" href="catalog.css" type="text/css">
+	</head>
+	<header>
+		<h1>
+			Thank you for your purchase!
+		</h1>
+	</header>
+	<nav>
+		<a href="catalog.html">Purchase More Bouquets!</a>
+	</nav>
+	<main>
+		<p>
+			Our bouquets are guaranteed to arrive safely at your specified shipping location in a span of around 3 days. We thank you for your patience. Please shop at Buy Bouquets Online again!
+		</p>
+		<img src="thanks.jpg" alt="thanks">
+	</main>
+	<footer>
+		©Gina Lew 2016 - Buy Bouquets Online
+	</footer>
 
