finished final project

--- a/catalog.html
+++ b/catalog.html
@@ -13,11 +13,11 @@
 			Bountiful Bouquets Online Florist
 		</h1>
 		<p>
-			Breathtaking blooms ready to be delivered to your doorstep with just a few simple clicks.
+			🌸  Breathtaking blooms ready to be delivered to your doorstep with just a few simple clicks. 🌸 
 		</p>	
 	</header>
 	<nav>
-		<a href="index.html">Home Page</a>
+		<a href="index.html"> Index Page</a>
 
 	</nav>
 	<main>
@@ -167,6 +167,7 @@
 			<a href="placeorder.html">Click here to order now!</a>
 		</article>
 	</main>
+    </body>
 	<footer>
 		©Gina Lew 2016 - Bountiful Bouquets Online Florist
 	</footer>
