--- a/placeorder.html
+++ b/placeorder.html
@@ -17,7 +17,7 @@
 	</nav>
 	<main>
 		<p>
-			Our bouquets are guaranteed to arrive safely at your specified shipping location in a span of around 3 days. We thank you for your patience. Please shop at Buy Bouquets Online again!
+			Our bouquets are guaranteed to arrive safely at your specified shipping location in a span of around 3 days. We thank you for your patience. Please shop at Bountiful Bouquets Online again!
 		</p>
 		<img src="thanks.jpg" alt="thanks">
 	</main>
